Update biome.json to include 'noApproximativeNumericConstant' setting. Enhance README with new ephemeris features, including planetary position calculations and retrograde detection. Refactor example code for clarity and add detailed usage instructions for celestial body positions.

--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,8 @@
         "useTemplate": "warn"
       },
       "suspicious": {
-        "noExplicitAny": "off"
+        "noExplicitAny": "off",
+        "noApproximativeNumericConstant": "off"
       }
     }
   },
