Remove outdated documentation files and enhance project structure. Delete KNOWLEDGE.md and NPM_PACKAGE.md to streamline the repository, focusing on essential files. Update README to reflect the new project description emphasizing precision in astrological calculations validated against authoritative sources. Revise package.json to improve the description and add relevant keywords for better discoverability. Update TypeDoc configuration for improved branding and navigation links. This cleanup enhances clarity and usability for developers and users alike.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "celestine",
   "version": "0.1.0",
-  "description": "A TypeScript library for astronomical and astrological calculations",
+  "description": "No-BS astrological calculations validated against NASA, JPL Horizons & Swiss Ephemeris. Birth charts, transits, progressions that actually work.",
   "type": "module",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
@@ -45,11 +45,100 @@
     "astrology",
     "astronomy",
     "ephemeris",
-    "natal chart",
+    "natal-chart",
+    "birth-chart",
     "horoscope",
     "zodiac",
     "planets",
-    "celestial"
+    "celestial",
+    "transits",
+    "progressions",
+    "aspects",
+    "houses",
+    "planetary-positions",
+    "astrological-calculations",
+    "swiss-ephemeris",
+    "jpl-horizons",
+    "nasa",
+    "vsop87",
+    "meeus",
+    "astronomical-algorithms",
+    "placidus",
+    "koch",
+    "whole-sign",
+    "regiomontanus",
+    "campanus",
+    "porphyry",
+    "equal-houses",
+    "lunar-nodes",
+    "true-node",
+    "mean-node",
+    "black-moon-lilith",
+    "lilith",
+    "chiron",
+    "asteroids",
+    "ceres",
+    "pallas",
+    "juno",
+    "vesta",
+    "retrograde",
+    "tropical-zodiac",
+    "sidereal-time",
+    "julian-date",
+    "julian-calendar",
+    "gregorian-calendar",
+    "ecliptic",
+    "obliquity",
+    "precession",
+    "equatorial",
+    "part-of-fortune",
+    "part-of-spirit",
+    "arabic-parts",
+    "lots",
+    "ptolemy",
+    "tetrabiblos",
+    "lilly",
+    "christian-astrology",
+    "kepler",
+    "harmonices-mundi",
+    "dignities",
+    "rulerships",
+    "exaltation",
+    "detriment",
+    "fall",
+    "domicile",
+    "essential-dignities",
+    "major-aspects",
+    "minor-aspects",
+    "septile",
+    "novile",
+    "decile",
+    "t-square",
+    "grand-trine",
+    "grand-cross",
+    "yod",
+    "kite",
+    "stellium",
+    "secondary-progressions",
+    "solar-arc",
+    "predictive-astrology",
+    "synastry",
+    "vedic",
+    "western-astrology",
+    "hellenistic",
+    "traditional-astrology",
+    "modern-astrology",
+    "chart-calculation",
+    "cosmic",
+    "spiritual",
+    "divination",
+    "esoteric",
+    "occult",
+    "hermetic",
+    "iers",
+    "delta-t",
+    "laskar",
+    "espenak"
   ],
   "author": {
     "name": "Anonyfox",
